--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,60 +1,119 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import homePageBg from '@assets/images/homePageBg.jpeg';
+import Layout from "../layouts/Layout.astro"
+import homePageBg from "@assets/images/homePageBg.jpeg"
 const title = "Free Bible Translation Tools for the Global Chuch"
+// todo: change links and add more of this text to frontmatter here
+// todo: add Nav
+import { i18nDict } from "@lib/i18n"
+import { getPreferredLangFromHeader } from "@lib/utils"
+const preferredLocale = getPreferredLangFromHeader(Astro.request)
 ---
 
-<Layout title="Welcome to Astro.">
-	<main>
-<div class="relative">
-	<img src={homePageBg} alt="" >
-	<span class="absolute w-full top-0 bottom-0 bg-black/30 z-10" aria-hidden="true"/>
-	<h1 class="text-white absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10 w-full px-8 text-center">{title}</h1>
-</div>
-<div class="w-11/12 mx-auto md:w-4/5 max-w-container py-12 ">
-	<h2 class="text-2xl text-center">Welcome to BibleTranslationTools.org!</h2>
-	<hr class="my-8 h-px bg-gray-200 border-0 dark:bg-gray-700 w-2/5 mx-auto">
-	<p>BibleTranslationTools.org is an online repository for open-licensed Biblical content in every language. Contributors from all over the world use this site to work together to create, translate, and distribute unrestricted discipleship resources.</p>
-	<div class="flex flex-col justify-center items-center sm:flex-row mt-12">
-
-			<div class="w-1/3 text-center grid place-content-center">
-					<h2 class="mb-8 text-xl">Translate</h2>
-					<a href="https://bibleineverylanguage.org/processes/" target="_blank"><img src="https://cdn.bibleineverylanguage.org/wp-content/uploads/2017/09/mast_diagram.png" alt="MAST Icon" style="height: 192px;"></a>
-			</div>
-			<div class="w-1/3 text-center grid place-content-center">
-					<h2 class="mb-8 text-xl">Resources</h2>
-					<a href="https://bibleineverylanguage.org/resources/"><img src="https://cdn.bibleineverylanguage.org/wp-content/uploads/2017/09/ulb.png " style="height: 192px;" alt="ULB Icon" ></a>
-			</div>
-			<div class="w-1/3 text-center grid place-content-center">
-					<h2 class="mb-8 text-xl">Browse</h2>
-					<a href="https://bibleineverylanguage.org/"><img src="https://bibleineverylanguage.org/wp-content/uploads/2017/07/bible-red-ribbon-prepped.png" alt="BIEL" style="height: 192px;"></a>
-			</div>
-
-	</div>
-</div>
-	</main>
-	<footer class="bg-black py-8" role="contentinfo" >
-		<div class="max-w-container mx-auto w-3/4 sm:w-1/2 grid place-content-center">
-		<nav class="mb-12 w-3/4 mx-auto" role="navigation" >
-				<ul class="flex text-white  mx-auto justify-between">
-					<li class=""><a href="https://bibleineverylanguage.org/">About</a></li>
-	<li class=""><a href="https://bibleineverylanguage.org/translations/">Browse</a></li>
-	<li class=""><a href="https://bibleineverylanguage.org/contact/">Contact</a></li>
-				</ul>
-	</nav> 
-		<div class="">
-			<p class="text-white/60 text-xs text-center">
-				<a class="block mx-auto w-max" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
-					<img alt="CC BY-SA License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
-				<br>
-				<span >The content of this page ("<a href="https://bibletranslationtools.org" >BibleTranslationTools</a>") from </span>
-				<span property="cc:attributionName">Wycliffe Associates</span> is licensed under a
-				<br><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
-					Attribution-ShareAlike 4.0 International License</a>. Original work available at http://door43.org.
-			</p>
-		</div>
-	</div>
-	</footer>
+<Layout title="Read on Web">
+  <main>
+    <div class="relative">
+      <img src={homePageBg} alt="" />
+      <span
+        class="absolute w-full top-0 bottom-0 bg-black/30 z-10"
+        aria-hidden="true"></span>
+      <h1
+        class="text-white absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-3xl z-10 w-full px-8 text-center"
+      >
+        {i18nDict[preferredLocale].homeTitle}
+      </h1>
+    </div>
+    <div class="w-11/12 mx-auto md:w-4/5 max-w-container py-12">
+      <h2 class="text-2xl text-center">
+        Welcome to BibleTranslationTools.org!
+      </h2>
+      <hr
+        class="my-8 h-px bg-gray-200 border-0 dark:bg-gray-700 w-2/5 mx-auto"
+      />
+      <p>
+        BibleTranslationTools.org is an online repository for open-licensed
+        Biblical content in every language. Contributors from all over the world
+        use this site to work together to create, translate, and distribute
+        unrestricted discipleship resources.
+      </p>
+      <div class="flex flex-col justify-center items-center sm:flex-row mt-12">
+        <div class="w-1/3 text-center grid place-content-center">
+          <h2 class="mb-8 text-xl">Translate</h2>
+          <a href="https://bibleineverylanguage.org/processes/" target="_blank"
+            ><img
+              src="https://cdn.bibleineverylanguage.org/wp-content/uploads/2017/09/mast_diagram.png"
+              alt="MAST Icon"
+              style="height: 192px;"
+            />
+          </a>
+        </div>
+        <div class="w-1/3 text-center grid place-content-center">
+          <h2 class="mb-8 text-xl">Resources</h2>
+          <a href="https://bibleineverylanguage.org/resources/"
+            ><img
+              src="https://cdn.bibleineverylanguage.org/wp-content/uploads/2017/09/ulb.png "
+              style="height: 192px;"
+              alt="ULB Icon"
+            />
+          </a>
+        </div>
+        <div class="w-1/3 text-center grid place-content-center">
+          <h2 class="mb-8 text-xl">Browse</h2>
+          <a href="https://bibleineverylanguage.org/"
+            ><img
+              src="https://bibleineverylanguage.org/wp-content/uploads/2017/07/bible-red-ribbon-prepped.png"
+              alt="BIEL"
+              style="height: 192px;"
+            />
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+  <footer class="bg-black py-8" role="contentinfo">
+    <div
+      class="max-w-container mx-auto w-3/4 sm:w-1/2 grid place-content-center"
+    >
+      <nav class="mb-12 w-3/4 mx-auto" role="navigation">
+        <ul class="flex text-white mx-auto justify-between">
+          <li class="">
+            <a href="https://bibleineverylanguage.org/">About</a>
+          </li>
+          <li class="">
+            <a href="https://bibleineverylanguage.org/translations/">Browse</a>
+          </li>
+          <li class="">
+            <a href="https://bibleineverylanguage.org/contact/">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="">
+        <p class="text-white/60 text-xs text-center">
+          <a
+            class="block mx-auto w-max"
+            rel="license"
+            href="http://creativecommons.org/licenses/by-sa/4.0/"
+          >
+            <img
+              alt="CC BY-SA License"
+              style="border-width:0"
+              src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"
+            />
+          </a>
+          <br />
+          <span
+            >The content of this page ("<a
+              href="https://bibletranslationtools.org">BibleTranslationTools</a
+            >") from
+          </span>
+          <span property="cc:attributionName">Wycliffe Associates</span> is licensed
+          under a
+          <br /><a
+            rel="license"
+            href="http://creativecommons.org/licenses/by-sa/4.0/"
+            >Creative Commons Attribution-ShareAlike 4.0 International License</a
+          >. Original work available at http://door43.org.
+        </p>
+      </div>
+    </div>
+  </footer>
 </Layout>
-
-
