--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,13 +23,14 @@ const preferredLocale = getPreferredLangFromHeader(Astro.request)
     <link rel="icon" type="image" href="/favicon-32x32.png" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
+    <meta name="description" content="A site to read rendered USFM" />
     <script src="/src/pwa.ts"></script>
     {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
   </head>
   <body>
     <div
       class={use100vh
-        ? "h-screen grid grid-rows-[minmax(100px),_calc(100vh_-_100px)]"
+        ? "h-screen grid grid-rows-[100px,_calc(100vh_-_100px)]"
         : ""}
       id="pageWrapper"
     >
