--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,12 @@
   font-size: 0.5rem;
   vertical-align: top;
 }
-
+/* todo: undo */
+a[href*="footnote-target"] {
+  color: blue;
+  padding: 0.5rem;
+  margin: -0.5rem;
+}
 .footnotes {
   font-size: 0.75rem;
 }
