--- a/src/components/global/Nav/Nav.astro
+++ b/src/components/global/Nav/Nav.astro
@@ -40,7 +40,7 @@ import { Header } from "./Header"
     border-left: 6px solid transparent;
     border-right: 6px solid transparent;
     border-top: 9px solid white;
-    margin-left: 0.25rem;
+    margin-inline: 0.25rem;
     transition: all 0.1s;
   }
   .languagePicker.open::after {
