--- a/src/pages/read/[user]/[repo].astro
+++ b/src/pages/read/[user]/[repo].astro
@@ -22,7 +22,6 @@ if (!isValid) return Astro.redirect("/404")
 
 // get of text and metadata
 const repoIndex = await getRepoIndex({ user, repo })
-
 if (!repoIndex) return Astro.redirect("/404")
 
 // grab query params (if present) for initial HTML
@@ -33,11 +32,12 @@ const { book, chapter } = getBookAndChapterFromUrl({
 })
 //  intial props/data for page;
 const initialHtml = await getChapterHtml({ user, repo, book, chapter })
+if (!initialHtml) return Astro.redirect("/404")
 seedAndMutateInitialDataRepoIndex({
   repoIndex,
   book, //slug, not native label;
   chapter,
-  initialHtml: String(initialHtml)
+  initialHtml: initialHtml
 })
 const preferredLocale = getPreferredLangFromHeader(Astro.request)
 const initialDictModule = await import(
@@ -46,11 +46,16 @@ const initialDictModule = await import(
 const initialDict = {
   [preferredLocale]: initialDictModule.default
 }
-console.log(initialDict)
 ---
 
-<Layout title={repo} use100vh={true}>
-  <div class="font-sans h-full bg-neutral-50">
+<Layout
+  title={`${repo}-${book}-${chapter}`}
+  use100vh={true}
+  textDir={repoIndex.textDirection}
+>
+  <div
+    class={`font-sans h-full bg-neutral-50 resourceType-${repoIndex.resourceType}`}
+  >
     <ReaderWrapper
       client:load
       firstBookKey={book}
@@ -63,3 +68,9 @@ console.log(initialDict)
     />
   </div>
 </Layout>
+
+<script>
+  window.addEventListener("popstate", (event) => {
+    console.log(event)
+  })
+</script>
