--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,7 +2,7 @@
 import MainLayout from "@layouts/Layout.astro"
 ---
 
-<MainLayout title="404">
+<MainLayout title="404" textDir="ltr">
   <body>
     <div class="grid place-content-center w-full pt-16 text-center">
       <h1 class="text-secondary text-[128px]">404</h1>
