--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -80,17 +80,23 @@
 /* #===============  FONT FACE   =============   */
 
 /* @=============== scrollbar   ============= */
-.theText::-webkit-scrollbar {
+
+.theText::-webkit-scrollbar,
+.customScrollBar::-webkit-scrollbar {
   width: 12px;
 }
-.theText {
+.theText,
+.customScrollBar {
   scrollbar-width: thin;
   scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+  overflow-wrap: anywhere;
 }
-.theText::-webkit-scrollbar-track {
+.theText::-webkit-scrollbar-track,
+.customScrollBar::-webkit-scrollbar-track {
   background: var(--scrollbarBG);
 }
-.theText::-webkit-scrollbar-thumb {
+.theText::-webkit-scrollbar-thumb,
+.customScrollBar::-webkit-scrollbar-thumb {
   background-color: var(--thumbBG);
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
@@ -108,6 +114,9 @@
 .menuNumberInput::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+body.noscroll {
+  overflow: hidden;
 }
 /*# =============== !addl utils   ============= */
 
@@ -148,6 +157,24 @@
   color: var(--color-accent);
   text-decoration: underline;
 }
+.tm-wrapper .navSection .navSection {
+  margin-left: 1rem;
+}
+.tm-wrapper .navSection .navSection .navSection {
+  margin-left: 1.5rem;
+}
+.tm-wrapper .navSection .navSection .navSection .navSection {
+  margin-left: 2rem;
+}
+.accordion-transition {
+  transition: height 300ms cubic-bezier(0.65, 0, 0.35, 1);
+  overflow: hidden;
+}
+
+/* .theText ul {
+  list-style: disc inside;
+} */
+
 /* .theText h2:has(~ h1) {
   font-size: var(--font-size-xl);
 } */
