--- a/src/pages/read/index.astro
+++ b/src/pages/read/index.astro
@@ -14,7 +14,7 @@ let paths = [
 ]
 ---
 
-<Layout title="Repo">
+<Layout title="Repo" textDir="ltr">
   <div class="p-8">
     <h2>Some Paths Possible Locally</h2>
     <div class="flex flex-col gap-2 p-8">
