tests refactored and deps updated

--- a/src/pages/read/[user]/[repo].astro
+++ b/src/pages/read/[user]/[repo].astro
@@ -132,6 +132,7 @@ const initialDict = {
   textDir={repoIndex.textDirection}
 >
   <div
+    data-testid="page-container"
     data-resourcetype={`resource-${repoIndex.resourceType}`}
     class={`font-sans h-full bg-neutral-50 resourceType-${repoIndex.resourceType}`}
   >
