--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -7,7 +7,7 @@ import MainLayout from "@layouts/Layout.astro"
     <div class="grid place-content-center w-full pt-16 text-center">
       <h1 class="text-secondary text-[128px]">404</h1>
       <p class="text-4xl text-center leading-relaxed">
-        Ruh Roh Raggy, <br /> We couldn't find that page
+        Sorry, we couldn't find that page.
       </p>
     </div>
   </body>
