--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,5 +1,6 @@
 ---
 import MainLayout from "@layouts/Layout.astro"
+// export const prerender = true
 ---
 
 <MainLayout title="404" textDir="ltr">
