trying Ios fix on will branch

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -49,7 +49,7 @@ const initialDict = {
   <body>
     <div
       class={use100vh
-        ? "h-screen grid grid-rows-[100px,_calc(100vh_-_100px)] print:block print:pb-20"
+        ? "print:block print:pb-20"
         : ""}
       id="pageWrapper"
     >
