--- a/src/pages/read/[user]/[repo].astro
+++ b/src/pages/read/[user]/[repo].astro
@@ -180,6 +180,12 @@ const initialDict = {
 </Layout>
 
 <script>
+//   window.addEventListener("load", () => {
+//   let root = document.documentElement;
+// // hacky stuff to adjust based on JS load for a true 100vh, but normalize the behavior between 
+//     const amount = window.innerHeight  + "px";
+//     root.style.setProperty('--screenHeight', amount);
+// } )
   // window.addEventListener("popstate", (event) => {
   //   console.log({ event })
   // })
