--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
   --color-darkAccent: #001533;
   --scrollbarBG: rgb(242, 242, 242);
   --thumbBG: var(--color-accent);
+  --screenHeight: 100vh;
 }
 /* Fluid font size variables, for browsers that support clamp */
 /* link */ /* https://www.fluid-type-scale.com/calculate?minFontSize=18&minWidth=300&minRatio=1.067&maxFontSize=18&maxWidth=1200&maxRatio=1.2&steps=sm%2Cbase%2Cmd%2Clg%2Cxl%2Cxxl%2Cxxxl&baseStep=base&prefix=font-size&decimals=2&includeFallbacks=on&useRems=on&remValue=16&previewFont=Inter */
@@ -118,6 +119,12 @@
 body.noscroll {
   overflow: hidden;
 }
+#pageWrapper {
+  height: var(--screenHeight);
+  display: grid;
+  grid-template-rows: (100px, calc(var(--screenHeight) - 100px));
+}
+
 /*# =============== !addl utils   ============= */
 
 /* =============== Text/Marker styles   ============= */
