forgot to enable the ios fix

--- a/src/pages/read/[user]/[repo].astro
+++ b/src/pages/read/[user]/[repo].astro
@@ -180,16 +180,16 @@ const initialDict = {
 </Layout>
 
 <script>
-//   window.addEventListener("load", () => {
-//   let root = document.documentElement;
-// // hacky stuff to adjust based on JS load for a true 100vh, but normalize the behavior between 
-//     const amount = window.innerHeight  + "px";
-//     root.style.setProperty('--screenHeight', amount);
-// } )
-  // window.addEventListener("popstate", (event) => {
-  //   console.log({ event })
-  // })
-  // function handleNav(details: any) {
-  //   console.log({ details })
-  // }
+  window.addEventListener("load", () => {
+    let root = document.documentElement
+    // hacky stuff to adjust based on JS load for a true 100vh, but normalize the behavior between
+    const amount = window.innerHeight + "px"
+    root.style.setProperty("--screenHeight", amount)
+  })
+  window.addEventListener("popstate", (event) => {
+    console.log({ event })
+  })
+  function handleNav(details: any) {
+    console.log({ details })
+  }
 </script>
