--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,18 +44,17 @@ const initialDict = {
     <title>{title}</title>
     <meta name="description" content="A site to read rendered USFM" />
     <script src="/src/pwa.ts"></script>
+    {console.log({ pwaInfo })}
     {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
   </head>
   <body>
-    <div
-      class={use100vh
-        ? "print:block print:pb-20"
-        : ""}
-      id="pageWrapper"
-    >
+    <div class={use100vh ? "print:block print:pb-20" : ""} id="pageWrapper">
       <Nav preferredLocale={preferredLocale} initialDict={initialDict} />
       <slot />
       <!-- <ReloadPrompt /> -->
     </div>
   </body>
 </html>
+<script>
+  console.log({ pwaInfo })
+</script>
